--- a/assets/css/stylelocal.css
+++ b/assets/css/stylelocal.css
@@ -4,18 +4,20 @@
     height: 350px;
     overflow: hidden;
     border: 1px solid #ccc;
-    margin-top:9px;
-    background-color:red;
-    color:white;
+    margin-top: 9px;
+    background-color: red;
+    color: white;
     padding: 0 12px;
     border-radius: 14px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+
 #news-content {
     margin: 0;
     padding: 10px;
     list-style: none;
 }
+
 .cards-box {
     display: flex;
     margin: 50px;
@@ -25,9 +27,36 @@
     width: 18rem;
     margin-left: 20px;
 }
-.card-body{
+
+.card-body {
     text-align: center;
 }
-.team-img-img1{
+
+.team-img-img1 {
     border-radius: 7px;
+}
+
+.spacing {
+    margin: 22px 0;
+}
+
+.main-btn {
+    margin-right: 20px;
+    padding: 12px;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+    border-color: red;
+    width: 100px;
+}
+
+.main-cnt-btn {
+    margin-right: 20px;
+    padding: 12px;
+    border-radius: 10px;
+    margin-top: 20px;
+    background-color: red;
+    color: white;
+    border-color: red;
+    width: 110px;
 }
