--- a/admin/assets/css/login2.css
+++ b/admin/assets/css/login2.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(assets/img/img.jpg) no-repeat;
+    background: url() no-repeat;
     background-size: cover;
     background-position: center;
 }
