--- a/admin/assets/css/login2.css
+++ b/admin/assets/css/login2.css
@@ -12,7 +12,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url() no-repeat;
+    background-color: red;
+    /* background-image: url("assets/back.jpg"); */
     background-size: cover;
     background-position: center;
 }
