--- a/admin/assets/scss/structure/_menu.scss
+++ b/admin/assets/scss/structure/_menu.scss
@@ -1,175 +1,210 @@
-// 
-// _menu.scss
 //
+// _menu.scss
+// 
 
-.topnav {
-    background: $header-bg;
-    padding: 0 calc(#{$grid-gutter-width} / 2);
-    box-shadow: 0px 6px 10px 0 rgba(0,0,0,0.05);
-    
-    .topnav-menu {
-        margin: 0;
-        padding: 0;
+.metismenu {
+    margin: 0;
+
+    li {
+        display: block;
+        width: 100%;
     }
 
-    .navbar-nav {
-        .nav-link {
-            font-size: .9375rem;
-            position: relative;
-            padding: 1rem 0.9rem;
+    .mm-collapse {
+        display: none;
 
-            i {
-                display: inline-block;
-                line-height: 24px;
-                height: 24px;
-                width: 24px;
-                background-color: darken($gray-100, 5%);
-                text-align: center;
-                border-radius: 50%;
-                margin-right: 10px;
-                font-size: 13px;
-                opacity: 0.85;
-            }
-        }
-    }
-}
-
-@include media-breakpoint-up(xl) {
-    .container-fluid {
-        max-width: 85%;
-    }
-}
-
-@include media-breakpoint-up(lg) {
-    .topnav {
-        .navbar-nav {
-            .nav-item {
-                &:first-of-type {
-                    .nav-link {
-                        padding-left: 0;
-                    }
-                }
-            }
+        &:not(.mm-show) {
+            display: none;
         }
 
-        .dropdown-item {
-            padding: .5rem 1.5rem;
-            min-width: 180px;
-        }
-
-        .dropdown {
-            .dropdown-menu {
-                margin-top: 0;
-                border-radius: 0 0 $dropdown-border-radius $dropdown-border-radius;
-
-                .arrow-down {
-                    &::after {
-                        right: 15px;
-                        transform: rotate(-135deg) translateY(-50%);
-                        position: absolute;
-                    }
-                }
-
-                .dropdown {
-                    .dropdown-menu {
-                        position: absolute;
-                        top: 0;
-                        left: 100%;
-                        display: none
-                    }
-                }
-            }
-
-            &:hover {
-                >.dropdown-menu {
-                    display: block;
-                }
-            }
-        }
-
-        .dropdown:hover>.dropdown-menu>.dropdown:hover>.dropdown-menu {
+        &.mm-show {
             display: block
         }
     }
 
-    .navbar-toggle {
-        display: none;
+    .mm-collapsing {
+        position: relative;
+        height: 0;
+        overflow: hidden;
+        transition-timing-function: ease;
+        transition-duration: .35s;
+        transition-property: height, visibility;
     }
 }
 
-.arrow-down {
-    display: inline-block;
+.vertical-menu {
+    width: $sidebar-width;
+    z-index: 1002;
+    background: $sidebar-light-bg;
+    bottom: 0;
+    margin-top: 0;
+    top: 0;
+    position: fixed;
+    box-shadow: $box-shadow;
+}
 
-    &:after {
-        border-color: initial;
-        border-style: solid;
-        border-width: 0 0 1px 1px;
-        content: "";
-        height: .4em;
-        display: inline-block;
-        right: 5px;
-        top: 50%;
-        margin-left: 10px;
-        transform: rotate(-45deg) translateY(-50%);
-        transform-origin: top;
-        transition: all .3s ease-out;
-        width: .4em;
+.main-content {
+    margin-left: $sidebar-width;
+    overflow: hidden;
+
+    .content {
+        padding: 0 15px 10px 15px;
+        margin-top: 70px;
     }
 }
 
-@include media-breakpoint-down(lg) {
-    .topnav-menu {
-        .navbar-nav {
-            li {
-                &:last-of-type {
-                    .dropdown {
-                        .dropdown-menu {
-                            right: 100%;
-                            left: auto;
+
+#sidebar-menu {
+    padding: 10px 0 30px 0;
+
+    .mm-active {
+        >.has-arrow {
+            &:after {
+                transform: rotate(-180deg);
+            }
+        }
+    }
+
+    .has-arrow {
+        &:after {
+            content: "\F140";
+            font-family: 'Material Design Icons';
+            display: block;
+            float: right;
+            transition: transform .2s;
+            padding-top: 2px;
+            font-size: 1rem;
+        }
+    }
+
+    ul {
+        li {
+            a {
+                display: block;
+                padding: .65rem 1.5rem;
+                color: $sidebar-menu-item-color;
+                position: relative;
+                font-size: 14px;
+                transition: all .4s;
+
+                &:hover {
+                    color: $sidebar-menu-item-hover-color;
+                }
+
+                i {
+                    display: inline-block;
+                    line-height: 24px;
+                    vertical-align: middle;
+                    height: 24px;
+                    width: 24px;
+                    background-color: darken($gray-100, 5%);
+                    text-align: center;
+                    border-radius: 50%;
+                    margin-right: 13px;
+                    opacity: 0.85;
+                }
+
+                span {
+                    vertical-align: middle;
+                }
+            }
+
+            .badge {
+                margin-top: 4px;
+            }
+
+            ul.sub-menu {
+                padding: 0;
+
+                li {
+
+                    a {
+                        padding: .4rem 1.5rem .4rem 3.85rem;
+                        font-size: 13px;
+                    }
+
+                    ul.sub-menu {
+                        padding: 0;
+
+                        li {
+                            a {
+                                padding: .4rem 1.5rem .4rem 4.5rem;
+                                font-size: 13px;
+                            }
                         }
                     }
                 }
             }
         }
+
     }
 }
 
-@include media-breakpoint-down(md) {
-    
-    .topnav {
-        max-height: 360px;
-        overflow-y: auto;
+.menu-title {
+    padding: 12px 20px !important;
+    letter-spacing: .05em;
+    pointer-events: none;
+    cursor: default;
+    font-size: 11px;
+    text-transform: uppercase;
+    color: $sidebar-menu-item-color;
+    font-weight: $font-weight-bold;
+}
 
-        .navbar-nav {
-            .nav-link {
-                padding: 0.75rem 1.1rem;
-            }
+.mm-active {
+    .active {
+        color: $primary !important;
+
+        i {
+            background-color: rgba($primary, 0.2) !important;
         }
-
-        .dropdown {
-            .dropdown-menu {
-                background-color: transparent;
-                border: none;
-                box-shadow: none;
-                padding-left: 15px;
-            }
-
-            .dropdown-item {
-                position: relative;
-                background-color: transparent;
-
-                &.active,
-                &:active {
-                    color: $primary;
-                }
-            }
+    }
+    .mm-active {
+        > a {
+            color: $primary !important;
         }
-
-        .arrow-down {
-            &::after {
-                right: 15px;
-                position: absolute;
+        
+        .mm-active {
+            i {
+                background-color: rgba($primary, 0.2) !important;
             }
         }
     }
+}
+
+@media (max-width: 992px) {
+    .vertical-menu {
+        display: none;
+    }
+
+    .main-content {
+        margin-left: 0;
+    }
+}
+
+body.enable-vertical-menu {
+
+    .vertical-menu,
+    .menu-overlay {
+        display: block;
+    }
+}
+
+.menu-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba($dark, 0.3);
+    display: none;
+    z-index: 1000;
+}
+
+.help-box {
+    margin: 1.5rem;
+    padding: 1rem;
+    background-color: $gray-100;
+    border-radius: 3px;
+    border: 1px solid $gray-200;
 }
